--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlbertGorgoriCrack/MyFirstApi.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AlbertGorgoriCrack/MyFirstApi/issues"
+  },
+  "homepage": "https://github.com/AlbertGorgoriCrack/MyFirstApi#readme",
+  "devDependencies": {}
 }
